--- a/style.css
+++ b/style.css
@@ -158,13 +158,14 @@ section .filter-card {
 .search-input {
   width: 700px;
   height: 50px;
+  text-align: center;
   border: none;
   border-radius: 4px 0px 0px 4px;
-  text-indent: 10px;
+  font-size: 11px;
 }
 
 .filter-card button {
-  width: 150px;
+  width: 100px;
   height: 50px;
   border-radius: 0px 4px 4px 0px;
   border: none;
